Refactor Interpreter out of parsing

--- a/SPL/SPL.vcxproj.filters
+++ b/SPL/SPL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\splHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\interpreter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\lexer.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\splHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\interpreter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
