--- a/SPL/SPL.vcxproj
+++ b/SPL/SPL.vcxproj
@@ -129,11 +129,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\interpreter.cpp" />
     <ClCompile Include="src\lexer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\splHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headers\interpreter.h" />
     <ClInclude Include="headers\lexer.h" />
     <ClInclude Include="headers\parsing.h" />
     <ClInclude Include="headers\splHelper.h" />
