--- a/SPL/SPL.vcxproj.filters
+++ b/SPL/SPL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\interpreter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\parsing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\lexer.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\interpreter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\ast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
